Edited wiki page through web user interface.

--- a/wiki/ClassWrap.wiki
+++ b/wiki/ClassWrap.wiki
@@ -380,7 +380,7 @@ binding API.
 
 Here are links to several class bindings which use !ClassWrap:
 
-  * [http://code.google.com/p/v8-juice/source/browse/trunk/src/client/sample/BoundNative/BoundNative.cpp BoundNative.cpp]
-  * [http://code.google.com/p/v8-juice/source/browse/trunk/src/client/sample/PosixFILE/PosixFILE.cpp PosixFILE.cpp]
+  * [http://code.google.com/p/v8-juice/source/browse/trunk/src/client/sample/BoundNative/BoundNative.cpp BoundNative.cpp] contains the generic test/demo code for ClassWrap.
+  * [http://code.google.com/p/v8-juice/source/browse/extra-plugins/src/PosixFILE/PosixFILE.cpp PosixFILE.cpp] binds the C-standard `FILE` API.
   * [http://code.google.com/p/v8-juice/source/browse/extra-plugins/src/expat ExpatParser]
   * [http://code.google.com/p/v8-juice/source/browse/trunk/src/lib/juice/PathFinder-cw.cc PathFinder-cw.cc]
