--- a/wiki/ClassWrap.wiki
+++ b/wiki/ClassWrap.wiki
@@ -255,6 +255,32 @@ b.Set( "destroy", CW::DestroyObject );
 
 That will trigger the destruction of the _native_ object using the bound destruction function. After the destruction/close function is called, subsequent JS-side use of the object's members will cause an exception to be thrown with a message similar to, "could not find native 'this' object." Thus, after the destruction routine is called, the object should be used any more. Though the native object is destroyed immediately, the now-empty JS object must be cleaned up by v8, and is left to the whims of the garbage collector. (v8 provides us with no API to force the immediate destruction of the JS object, as far as i'm aware.)
 
+=Creating New Instances=
+
+Once we've bound a type using ClassWrap, we can create new JS-side instances of it from native code like so:
+
+{{{
+namespace cv = v8::juice::convert;
+
+// Constructor arguments:
+v8::Handle<v8::Value> argv[] =
+    {
+    cv::CastToJS( 17 ),
+    cv::CastToJS( 42.24 )
+    };
+
+typedef v8::juice::cw::ClassWrap<MyNative> CW;
+// Instantiate new instance via JS:
+v8::Handle<v8::Object> jobj =
+  CW::Instance().NewInstance( sizeof(argv)/sizeof(argv[0]),argv);
+// Get a handle to the native, which is owned by v8:
+MyNative * my = cv::CastFromJS<MyNative>( jobj );
+if( ! my ) {
+    ... construction failed and possibly threw a JS-side exception ...
+}
+}}}
+
+
 = Caveats and Gotchas =
 
 
