Edited wiki page through web user interface.

--- a/wiki/BindableFunctions.wiki
+++ b/wiki/BindableFunctions.wiki
@@ -1,5 +1,8 @@
 #summary Optional JS-bindable functions
 #labels Topic-CPlusPlus,Topic-JS-API,Phase-UserDocs
+
+See also: [BindingFunctions]
+
 <wiki:toc max_depth=4/>
 
 = Optional JS Functions =
