--- a/wiki/BindableFunctions.wiki
+++ b/wiki/BindableFunctions.wiki
@@ -51,6 +51,7 @@ See [PathFinderClass].
 
 Added to the API on 20090912.
 
+
 || *Native Function* (of type `v8::InvocationCallback`) || *JS Signature* || *Description* ||
 || `v8::juice::setTimeout` || `setTimeout(Function | string, milliseconds)` || Like the browser-standard function, but runs in a separate thread. ||
 || `v8::juice::clearTimeout` || `clearTimeout(timerID)` || Removes a scheduled `setTimeout()` callback. ||
@@ -60,9 +61,19 @@ Added to the API on 20090912.
 || `v8::juice::mssleep` || `mssleep(milliseconds)` || Sleeps for a given number of milliseconds, unlocking the v8 VM for use by other threads during that time. ||
 || `v8::juice::usleep` || `usleep(microseconds)` || Sleeps for a given number of microseconds, unlocking the v8 VM for use by other threads during that time. ||
 
+
+*ACHTUNG:* the names of setTimeout() and friends WILL BE RENAMED at some point because these implementations are not 100% usage-compatible with browser-side implementations. See below for more details.
+
+It has come to my attention that there is a JS-only implementation of setTimeout() and friends available here:
+
+  * http://github.com/visionmedia/js-mock-timers/
+
+and that one seems to be more browser-compliant.
+
 Due to internal details, `clearTimeout()` and `clearInterval()` are interchangeable, and either can be used
 to clear IDs returned from `setTimeout()` or `setInterval()`. Passing 0 to any of the `sleep` variants will briefly unlock the v8 engine for other threads, and this can be used to implement a `yield` operation.
 
 For the timeout functions to work, a `v8::Locker` instance must have been instantiated before the JS code which uses them starts executing. Don't as me why. If you're using `v8-juice-shell` then this is done for you, but if you're writing your own app, you'll need to add that.
 
 *ACHTUNG:* these functions do not work _identically_ to their browser-side counterparts. These actually run in a different thread, whereas browsers use a single thread and once the timeout function is called it will run until finished before returning control to the main code (or another timeout function, or whatever). In practice, however, i don't believe that this will make a big difference in how these functions are used, compared to the same-named browser-side functions. These functions are likely to be renamed at some point, in any case (just waiting on some good names).
+
