--- a/wiki/ThreadingInJS.wiki
+++ b/wiki/ThreadingInJS.wiki
@@ -5,10 +5,12 @@
 
 = Basic multi-threading in !JavaScript =
 
-Version 20090912 added the `setTimeout()` family of functions (see [BindableFunctions]). which can be used to implement the most basic multi-threaded features.
+Updated 20100408 for the `spawnTimeoutThread()` family of functions (see [BindableFunctions]).
 
 
-==setTimeout() and friends==
+==spawnTimeoutThread() and friends==
+
+The functions `spawnTimeoutThread()` and `spawnIntervalThread()` are interface-compatible with the standard `setTimeout()` and `setInterval()` functions, but they have a subtle difference: they use their own threads instead of running in the main thread. They may (indirectly) interrupt (and be interrupted by) the main thread at arbitrary point during their execution.
 
 They are used like this:
 
@@ -18,17 +20,17 @@ function timeout()
    print("Timeout reached!");
 }
 
-setTimeout(timeout,1500);
-sleep(3);
+spawnTimeoutThread(timeout,500 /*milliseconds*/);
+sleep(3); // see notes below
 }}}
 
-That will schedule the function `timeout()` to be called one time in 1500 milliseconds (1.5 seconds). The call to `sleep()` there is only to give the timeout function time to fire. Using sleep this way is _not_ a reliable way of ensuring that a certain timeout has been run, and is only used here for demonstration purposes.
+That will start a second thread and schedule the function `timeout()` to be called one time in 500 milliseconds (1.5 seconds). The call to `sleep()` there is only to give the timeout function time to fire. It also incidentally unlocks the v8 engine for the duration of the sleep, allowing the timeout thread to run. Without the sleep(), the timeout may never run! Using sleep like this is _not_ a reliable way of ensuring that a certain timeout has been run, and is only used here for demonstration purposes.
 
-To call a function at intervals, use `setInterval()` instead of `setTimeout()`, or have your timeout handler call `setTimeout()` when it is finished processing.
+To call a function at intervals, use `spawnIntervalThread()` instead of `spawnTimeoutThread()`, or have your timeout handler call `spawnTimeoutThread()` when it is finished processing.
 
-The `setTimeout()` and `setInterval()` functions returns a unique ID which can be passed to `clearTimeout()` or `clearInterval()` in order to cancel the calling of the callback function (assuming the clear routine is called before the timeout expires).
+The `spawnTimeoutThread()` and `spawnIntervalThread()` functions returns a unique ID which can be passed to `clearIntervalThread()` or `clearTimeoutThread()` in order to cancel the calling of the callback function (assuming the clear routine is called before the timeout expires).  When `spawnTimeoutThread()` returns without rescheduling itself, the enclosing thread is destroyed automatically. Likewise, when `clearTimeoutThread()` or `clearIntervalThread()` are used, the thread will be destroyed automatically the next time it wakes up to execute.
 
-In this implementation (though apparently not per the client-side JS specification), `clearTimeout()` is equivalent to `clearInterval()`, and either can be used for both types of timeout IDs.
+In this implementation `clearIntervalThread()` is equivalent to `clearTimeoutThread()`, and either can be used for both types of timeout IDs. Two functions are only provided for symmetry with the `setTimeout()` API.
 
 =Major Limitations=
 
@@ -42,14 +44,12 @@ The `sleep()` family of functions will unlock the v8 engine while they are sleep
 
 ==Timing is Everything (and undefined)==
 
-The addition of multiple threads in a process always adds some level of uncertainty in the timing of execution of the various threads. High-level languages which use unpredictable GC (and/or lack destructors) add even more uncertainty (destructors are a great way to simplify locking in languages which support them). Threads created via `setTimeout()` cannot be reliably used for high-resolution threading (that is, where threads interact in very short intervals).
+The addition of multiple threads in a process always adds some level of uncertainty in the timing of execution of the various threads. High-level languages which use unpredictable GC (and/or lack destructors) add even more uncertainty (destructors are a great way to simplify locking in languages which support them). Threads created via `spawnTimeoutThread()` and friends cannot be reliably used for high-resolution threading (that is, where threads interact in very short intervals).
 
 In the following code it is impossible to know with certainty which of the operations, running or cancelling the timeout, will happen first, due to the imprecision introduced via multi-threading and system-level timing issues:
 
 {{{
-var delay = 1;
-var tid = setTimeout(function(){}, delay);
-clearTimeout(tid);
+clearTimeoutThread( spawnTimeoutThread(function(){}, 1) );
 }}}
 
 Do not rely on JS code for this type of precision. If you need that level of thread control, do it in native code and (if needed) add a higher-level JS wrapper around that.
@@ -68,4 +68,4 @@ while( t.isRunning() )
 }
 }}}
 
-however, i'm not yet up to that task, and currently can see little benefit over using `setTimeout()`, given all of the JS-implied limitations of the hypothetical Thread class. It's also not clear whether such a class should run in a detached or joinable mode (`setTimeout()` is detached).
+however, i'm not yet up to that task, and currently can see little benefit over using `setTimeout()` or `spawnTimeoutThread()`, given all of the JS-implied limitations of the hypothetical Thread class. It's also not clear whether such a class should run in a detached or joinable mode (`spawnTimeoutThread()` is detached).
