Edited wiki page through web user interface.

--- a/wiki/PluginCurl.wiki
+++ b/wiki/PluginCurl.wiki
@@ -518,6 +518,7 @@ if( rc )
 {
     throw new Error("curl.easyPerform() returned error code "+rc+"!");
 }
+print( wikiOutput.join('') );
 }}}
 
 = TODOs =
