--- a/wiki/ThreadingInJS.wiki
+++ b/wiki/ThreadingInJS.wiki
@@ -24,11 +24,11 @@ spawnTimeoutThread(timeout,500 /*milliseconds*/);
 sleep(3); // see notes below
 }}}
 
-That will start a second thread and schedule the function `timeout()` to be called one time in 500 milliseconds (1.5 seconds). The call to `sleep()` there is only to give the timeout function time to fire. It also incidentally unlocks the v8 engine for the duration of the sleep, allowing the timeout thread to run. Without the sleep(), the timeout may never run! Using sleep like this is _not_ a reliable way of ensuring that a certain timeout has been run, and is only used here for demonstration purposes.
+That will start a second thread and schedule the function `timeout()` to be called one time in 500 milliseconds (0.5 seconds). The call to `sleep()` there is only to give the timeout function time to fire. It also incidentally unlocks the v8 engine for the duration of the sleep, allowing the timeout thread to run. Without the sleep(), the timeout may never run! Using sleep like this is _not_ a reliable way of ensuring that a certain timeout has been run, and is only used here for demonstration purposes.
 
-To call a function at intervals, use `spawnIntervalThread()` instead of `spawnTimeoutThread()`, or have your timeout handler call `spawnTimeoutThread()` when it is finished processing.
+To call a function at intervals, use `spawnIntervalThread()` instead of `spawnTimeoutThread()`, or have your timeout handler call `spawnTimeoutThread()` when it is finished processing (that is less efficient, because it ends up destroying one thread only to replace it with a functionally identical one).
 
-The `spawnTimeoutThread()` and `spawnIntervalThread()` functions returns a unique ID which can be passed to `clearIntervalThread()` or `clearTimeoutThread()` in order to cancel the calling of the callback function (assuming the clear routine is called before the timeout expires).  When `spawnTimeoutThread()` returns without rescheduling itself, the enclosing thread is destroyed automatically. Likewise, when `clearTimeoutThread()` or `clearIntervalThread()` are used, the thread will be destroyed automatically the next time it wakes up to execute.
+The `spawnTimeoutThread()` and `spawnIntervalThread()` functions return a unique ID which can be passed to `clearIntervalThread()` or `clearTimeoutThread()` in order to cancel the calling of the callback function (assuming the clear routine is called before the timeout expires).  When `spawnTimeoutThread()` returns without rescheduling itself, the enclosing thread is destroyed automatically. Likewise, when `clearTimeoutThread()` or `clearIntervalThread()` are used, the thread will be destroyed automatically the next time it wakes up to execute.
 
 In this implementation `clearIntervalThread()` is equivalent to `clearTimeoutThread()`, and either can be used for both types of timeout IDs. Two functions are only provided for symmetry with the `setTimeout()` API.
 
@@ -38,7 +38,7 @@ The !JavaScript language specification does not define any sort of locking behav
 
 ==There is no Preemtion==
 
-The v8 engine is internally single-threaded. At certain points during JS execution it checks to see if a thread is waiting to make use of of the engine (via constructing a `v8::Locker` object in native code). If you have a JS thread which is sitting in a tight loop and never triggers one of the v8-internal thread-preemtion checks (e.g. it never calls a function) then other threads might never get to run.
+The v8 engine is internally single-threaded. At certain points during JS execution it checks to see if a thread is waiting to make use of of the engine (via constructing a `v8::Locker` object in native code). If you have a JS thread which is sitting in a tight loop and never triggers one of the v8-internal thread-preemtion checks (e.g. it never calls a v8 function) then other threads might never get to run.
 
 The `sleep()` family of functions will unlock the v8 engine while they are sleeping, and can be used in a thread to give v8 a chance to allow other threads to run. v8 _might_ do that anyway, but will only do so at certain points in its execution (namely function calls). Calling `sleep(0)` is one way to emulate a "yield" operation, as that unlocks the engine, allowing v8 to pass control to other threads, and then locks it again when control is given back to the original thread.
 
