--- a/wiki/ClassWrap.wiki
+++ b/wiki/ClassWrap.wiki
@@ -41,10 +41,6 @@ struct BoundNative
 {
 public:
     static bool enableDebug;
-private:
-    static size_t instcount;
-    int propi;
-public:
     double publicProperty;
     BoundNative();
     explicit BoundNative( int i, double d = 42.24 );
@@ -62,7 +58,7 @@ public:
 
 }}}
 
-Now let's see how to "bind" various aspects of `BoundNative`
+All of those members are bindable by this framework ("bind" = to tie this class to !JavaScript). Now let's see how to bind various aspects of `BoundNative`
 into JS...
 
 =Setting up the Basic Policies=
@@ -114,7 +110,7 @@ interface (two functions and one constant).
 
 == Class Name Policy ==
 
-The !ClassName policy defines a bound class's JS-side name. It looks like:
+The !ClassName policy defines a bound class' JS-side name. It looks like:
 
 {{{
 template <>
@@ -133,7 +129,7 @@ Alternately, we can call the following macro from the global scope:
 JUICE_CLASSWRAP_CLASSNAME(BoundNative,"BoundNative");
 }}}
 
-which generates the above code.
+which generates something like the above code.
 
 Some policy sets provide this feature as part of their setup.
 
@@ -155,6 +151,8 @@ v8::Handle<v8::Object> SetupBoundNativeClass( v8::Handle<v8::Object> dest )
    return b.CtorTemplate()->GetFunction();
 }
 }}}
+
+The exact signature and return value of that function need to be identical to the one shown here. The important thing is that the function have an Object argument which represents the logical global object for the bound class. (It need not be the real global object, though it often is.)
 
 =Binding Functions=
 
@@ -253,7 +251,7 @@ For any class wrapped by the ClassWrap API, we can simply do the following:
 b.Set( "destroy", CW::DestroyObject );
 }}}
 
-That will trigger the destruction of the _native_ object using the bound destruction function. After the destruction/close function is called, subsequent JS-side use of the object's members will cause an exception to be thrown with a message similar to, "could not find native 'this' object." Thus, after the destruction routine is called, the object should be used any more. Though the native object is destroyed immediately, the now-empty JS object must be cleaned up by v8, and is left to the whims of the garbage collector. (v8 provides us with no API to force the immediate destruction of the JS object, as far as i'm aware.)
+That will trigger the destruction of the _native_ object using the bound destruction function. After the destruction/close function is called, subsequent JS-side use of the object's members will cause an exception to be thrown with a message similar to, "could not find native 'this' object." Thus, after the destruction routine is called, the object should not be used any more. Though the native object is destroyed immediately, the now-empty JS object must be cleaned up by v8, and is left to the whims of the garbage collector. (v8 provides us with no API to force the immediate destruction of the JS object, as far as i'm aware.)
 
 =Creating New Instances=
 
